# workflow-api

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  test.db  workflow.db
app/: main.py
app/api/: models.py  ping.py  routes.py
app/db/: models.py
config/: workflow-api.init
scripts/: entrypoint.sh  push_to_ecr.sh
tests/: conftest.py  test_ping.py  test_routes.py
