[tool.poetry]
name = "workflow-api"
version = "0.1.0"
description = ""
authors = ["TrangRock <trangrock@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
gunicorn = "^21.2.0"
sqlalchemy = "^2.0.28"
psycopg2 = "^2.9.9"
python-multipart = "^0.0.9"
flake8 = "^7.0.0"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
requests = "^2.31.0"
httpx = "^0.27.0"
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
